spade-tests/src/snapshots/spade_tests__parser__functions_do_not_allow_inst_pipeline.snap
---
source: spade-tests/src/parser.rs
---
pipeline(2) P() -> bool {
    reg;
        false
}

fn X() -> bool {
    inst(2) Y()
}


error: Entities and pipelines can not be instantiated in functions
  ┌─ testinput:7:5
  │
6 │ fn X() -> bool {
  │ -- This is a function
7 │     inst(2) Y()
  │     ^^^^ inst not allowed here
  │
  = note: Functions can only contain combinatorial logic
  = Consider making the function an entity
  │
6 │ entity X() -> bool {
  │ ~~~~~~


